Improve alongshore generation and OI data conversion

--- a/generate_alongshore_currents.ipynb
+++ b/generate_alongshore_currents.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "velocity_field_nc = FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209.nc\"\n",
     "coastline_mat = DATA_DIR / \"socal_boundary.mat\"\n",
-    "output_file = \"data/field_netcdfs/oi_fields/Tot_SDLJ_202209_alongshore.nc\"\n",
+    "output_file = FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209_alongshore.nc\"\n",
     "# 1 km resolution values\n",
     "lat_diff = 0.00898933\n",
     "lon_diff = 0.01042175"
@@ -67,8 +67,11 @@
    "outputs": [],
    "source": [
     "vel_ds = rename_dataset_vars(xr.open_dataset(velocity_field_nc))\n",
-    "lats, lons = utils.load_pts_mat(coastline_mat)\n",
-    "coastline = LineString(np.array([lats, lons]).T)"
+    "coast_lats, coast_lons = utils.load_pts_mat(coastline_mat)\n",
+    "coast_segments = np.empty(len(coast_lats) - 1, dtype=object)\n",
+    "for i in range(coast_segments.shape[0]):\n",
+    "    coast_segments[i] = LineString([[coast_lats[i], coast_lons[i]], [coast_lats[i + 1], coast_lons[i + 1]]])\n",
+    "coastline = LineString(np.array([coast_lats, coast_lons]).T)"
    ]
   },
   {
@@ -79,9 +82,9 @@
    "outputs": [],
    "source": [
     "if lat_diff is None:\n",
-    "    lat_diff = abs(np.diff(lats).min())\n",
+    "    lat_diff = abs(np.diff(coast_lats).min())\n",
     "if lon_diff is None:\n",
-    "    lon_diff = abs(np.diff(lons).min())"
+    "    lon_diff = abs(np.diff(coast_lons).min())"
    ]
   },
   {
@@ -91,10 +94,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat_start = min(lats.min(), vel_ds[\"lat\"].values.min())\n",
-    "lat_end = max(lats.max(), vel_ds[\"lat\"].values.max())\n",
-    "lon_start = min(lons.min(), vel_ds[\"lon\"].values.min())\n",
-    "lon_end = max(lons.max(), vel_ds[\"lon\"].values.max())"
+    "lat_start = vel_ds[\"lat\"].values.min()\n",
+    "lat_end = vel_ds[\"lat\"].values.max()\n",
+    "lon_start = vel_ds[\"lon\"].values.min()\n",
+    "lon_end = vel_ds[\"lon\"].values.max()"
    ]
   },
   {
@@ -127,7 +130,7 @@
    "outputs": [],
    "source": [
     "grid = np.empty((len(lats_grid), len(lons_grid)), dtype=object)\n",
-    "info = np.empty((len(lats_grid), len(lons_grid)), dtype=object)"
+    "coast_vecs = np.empty((len(lats_grid), len(lons_grid)), dtype=object)"
    ]
   },
   {
@@ -153,22 +156,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf8ced7",
+   "id": "afcc8034",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "for i in range(len(lats) - 1):\n",
-    "    segment = LineString([[lats[i], lons[i]], [lats[i + 1], lons[i + 1]]])\n",
-    "    vec = (lons[i + 1] - lons[i], lats[i + 1] - lats[i])\n",
-    "    start_j = int((lats[i] - lats_grid[0]) // lat_diff)\n",
-    "    end_j = math.ceil((lats[i + 1] - lats_grid[0]) / lat_diff)\n",
-    "    start_k = int((lons[i] - lons_grid[0]) // lon_diff)\n",
-    "    end_k = math.ceil((lons[i + 1] - lons_grid[0]) / lon_diff)\n",
-    "    for j in range(min(start_j, end_j), max(start_j, end_j) + 1):\n",
-    "        for k in range(min(start_k, end_k), max(start_k, end_k) + 1):\n",
-    "            if info[j, k] is None and segment.intersects(grid[j, k]):\n",
-    "                info[j, k] = vec"
+    "for (i, j), gridbox in np.ndenumerate(grid):\n",
+    "    if coastline.intersects(gridbox):\n",
+    "        for segment in coast_segments:\n",
+    "            if segment.intersects(gridbox):\n",
+    "                seg_lats, seg_lons = segment.xy\n",
+    "                vec = (seg_lons[1] - seg_lons[0], seg_lats[1] - seg_lats[0])\n",
+    "                coast_vecs[i, j] = vec"
    ]
   },
   {
@@ -180,7 +178,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(10, 10))\n",
-    "plt.scatter(np.where(info != None)[1], np.where(info != None)[0], s=2)"
+    "plt.scatter(np.where(coast_vecs != None)[1], np.where(coast_vecs != None)[0], s=2)"
    ]
   },
   {
@@ -198,28 +196,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "info_where = np.where(info != None)\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "coast_vecs_where = np.where(coast_vecs != None)\n",
     "plt.quiver(\n",
-    "    info_where[1],\n",
-    "    info_where[0],\n",
-    "    list(map(lambda x: x[0], info[info_where])),\n",
-    "    list(map(lambda x: x[1], info[info_where])),\n",
+    "    coast_vecs_where[1],\n",
+    "    coast_vecs_where[0],\n",
+    "    list(map(lambda x: x[0], coast_vecs[coast_vecs_where])),\n",
+    "    list(map(lambda x: x[1], coast_vecs[coast_vecs_where])),\n",
     "    width=0.001,\n",
     "    pivot='mid'\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "534db893",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.scatter(lons, lats, s=0.1)"
    ]
   },
   {
@@ -254,11 +240,11 @@
     "    v = vel_ds[\"V\"][i].values\n",
     "    for j in range(grid.shape[0]):\n",
     "        for k in range(grid.shape[1]):\n",
-    "            if info[j, k] is not None:\n",
+    "            if coast_vecs[j, k] is not None:\n",
     "                closest_idx = kdtree.query([lats_grid[j], lons_grid[k]])[1]\n",
     "                closest_u = u[nonzero[0][closest_idx], nonzero[1][closest_idx]]\n",
     "                closest_v = v[nonzero[0][closest_idx], nonzero[1][closest_idx]]\n",
-    "                vec = info[j, k]  # this order should be in u, v (it was diff lon, diff lat)\n",
+    "                vec = coast_vecs[j, k]  # this order should be in u, v (it was diff lon, diff lat)\n",
     "                # project u, v pair onto coastline vector\n",
     "                scalar = (closest_u * vec[0] + closest_v * vec[1]) / (vec[0] ** 2 + vec[1] ** 2)\n",
     "                coast_u[i, j, k] = scalar * vec[0]\n",
