--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -66,62 +66,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TIJUANA_RIVER_DOMAIN = dict(\n",
-    "    S=32.528,\n",
-    "    N=32.71,\n",
-    "    W=-117.29,\n",
-    "    E=-117.11,\n",
-    ")\n",
-    "CLOSE_TIJUANA_DOMAIN = dict(\n",
-    "    S=32.53,\n",
-    "    N=32.5825,\n",
-    "    W=-117.162,\n",
-    "    E=-117.105,\n",
-    ")\n",
-    "THING_DOMAIN = {\n",
-    "    \"S\": 32.41,\n",
-    "    \"N\": 32.7,\n",
-    "    \"W\": -117.25,\n",
-    "    \"E\": -117\n",
-    "}\n",
-    "\n",
-    "lats, lons = utils.load_pts_mat(DATA_DIR / \"coastline.mat\", \"latz0\", \"lonz0\")\n",
-    "coastline = np.array([lats, lons])\n",
-    "# just filter out the problematic upper coastline where it goes up and down\n",
-    "coastline = coastline[:, :288]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(coastline[1], coastline[0], s=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def coord_inland(coastline, lat, lon):\n",
-    "    lower_ind = np.where(coastline[0] <= lat)[0]\n",
-    "    if lower_ind.size > 0:\n",
-    "        lower_ind = lower_ind[-1]\n",
-    "    else:\n",
-    "        lower_ind = 0\n",
-    "    upper_ind = np.where(coastline[0] >= lat)[0]\n",
-    "    if upper_ind.size > 0:\n",
-    "        upper_ind = upper_ind[0]\n",
-    "    else:\n",
-    "        upper_ind = -1\n",
-    "    left = min(coastline[1][lower_ind], coastline[1][upper_ind])\n",
-    "    # can get away with this since the coastline points are dense enough\n",
-    "    return lon > left\n",
-    "\n",
-    "\n",
     "def parse_mat_time(time):\n",
     "    date = np.datetime64(\"0\") + np.timedelta64(int(time) - 1, \"D\")\n",
     "    hour = int(round((time - int(time)) * 24))\n",
@@ -134,7 +78,7 @@
     "    return d, t\n",
     "\n",
     "\n",
-    "def dataset_from_mat(grid_mat_path, current_mat_path, remove_land_currents):\n",
+    "def dataset_from_mat(grid_mat_path, current_mat_path):\n",
     "    grid_mat = scipy.io.loadmat(grid_mat_path)\n",
     "    current_mat = scipy.io.loadmat(current_mat_path)\n",
     "    if \"totalGrid\" in grid_mat:\n",
@@ -154,13 +98,9 @@
     "    v_grid = np.zeros((1, len(lats), len(lons)))\n",
     "    for i in range(len(lons)):\n",
     "        for j in range(len(lats)):\n",
-    "            if remove_land_currents and not np.isnan(u[0, i * len(lats) + j]) and coord_inland(coastline, lats[j], lons[i]):\n",
-    "                u_grid[0, j, i] = np.nan\n",
-    "                v_grid[0, j, i] = np.nan\n",
-    "            else:\n",
-    "                # data from .mat is measured in cm/s\n",
-    "                u_grid[0, j, i] = u[0, i * len(lats) + j] / 100\n",
-    "                v_grid[0, j, i] = v[0, i * len(lats) + j] / 100\n",
+    "            # data from .mat is measured in cm/s\n",
+    "            u_grid[0, j, i] = u[0, i * len(lats) + j] / 100\n",
+    "            v_grid[0, j, i] = v[0, i * len(lats) + j] / 100\n",
     "    ds = xr.Dataset(\n",
     "        {\n",
     "            \"U\": ([\"time\", \"lat\", \"lon\"], u_grid),\n",
@@ -197,7 +137,7 @@
     "    date_parsed, time_parsed = parse_time(current_time)\n",
     "    filename = mat_tot_dir / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
     "    if filename.is_file():\n",
-    "        ds = dataset_from_mat(coord_grid_path, filename, False)\n",
+    "        ds = dataset_from_mat(coord_grid_path, filename)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
@@ -216,15 +156,6 @@
     "# display fieldset to see if data was loaded correctly\n",
     "fs = dataset_to_fieldset(ds_total)\n",
     "fs.U.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_total[\"time\"]"
    ]
   },
   {
