Add density comparison notebook

--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "from pyplume.constants import CONFIGS_DIR\n",
-    "import pyplume.utils as utils\n",
+    "from pyplume import utils\n",
     "from pyplume.config_parser import load_config, prep_sim_from_cfg, process_results"
    ]
   },
@@ -50,8 +50,8 @@
     "    # \"tijuana_2020-03_overland.json\",\n",
     "    # \"tijuana_2020-03_slipmask.json\",\n",
     "    # \"tijuana_2020-03_alongshore.json\",\n",
-    "    \"tijuana_2022-09_alongshore.yaml\",\n",
-    "    # \"tijuana_2022-09_oi_alongshore.yaml\"\n",
+    "    \"tijuana_hurrkay_alongshore.yaml\",\n",
+    "    # \"tijuana_hurrkay_oi_alongshore.yaml\"\n",
     "]"
    ]
   },
@@ -67,15 +67,6 @@
     "sims = []\n",
     "for cfg in loaded_configs:\n",
     "    sims.append(prep_sim_from_cfg(cfg))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sims[0].kernels"
    ]
   },
   {
