Remove old notebook, add more plotting to density notebook

--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    \"thredds_nosmoothn\": \"results/simulation_tijuana_hurrkay_alongshore_2022-11-02T13-36-12-nosmoothn/particlefile.nc\",\n",
     "    \"oi\": \"results/simulation_tijuana_hurrkay_oi_alongshore_2022-10-31T13-18-58/particlefile.nc\"\n",
     "}\n",
-    "to_compare = [\"thredds_nosmoothn_result\", \"oi_result\"]\n",
+    "to_compare = [\"thredds_nosmoothn\", \"oi\"]\n",
     "coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
     "\n",
     "domain = constants.TIJUANA_RIVER_DOMAIN\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,23 @@
     "    plotting.draw_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
     "    strnum = str(i).zfill(3)\n",
     "    plotting.draw_plt(savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save plot as final timestamps\n",
+    "\n",
+    "t = common_timestamps[-1]\n",
+    "for i, name in enumerate(to_compare):\n",
+    "    lats, lons = results[name].get_positions_time(t, when=\"before\")\n",
+    "    fig, ax = plotting.carree_subplots((1,1), domain=domain)\n",
+    "    plotting.draw_particle_density(lats, lons, bins=100, ax=ax, pmax=0.7, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    plotting.draw_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
+    "    plotting.draw_plt(savefile=res_path / f\"density_plot_final_{name}.png\", fig=fig, fit=True, figsize=(5, 5))"
    ]
   }
  ],
