--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "from pyplume.constants import FIELD_NETCDF_DIR\n",
     "from pyplume.dataloaders import slice_dataset, dataset_to_fieldset\n",
-    "import pyplume.utils as utils\n",
+    "from pyplume import utils\n",
     "from pyplume.thredds_data import retrieve_dataset, retrieve_dataloader"
    ]
   },
@@ -138,16 +138,26 @@
     "    #   \"lon_range\": (273, 295),\n",
     "    #   \"include_range_endpoints\": False\n",
     "    # },\n",
+    "    # {\n",
+    "    #   \"name\": \"tj_plume_1km_2022-09\",\n",
+    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #   \"code\": \"USWC_1KM_HOURLY\",\n",
+    "    #   \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
+    "    #   \"lat_range\": (32.11093, 32.73124),\n",
+    "    #   \"lon_range\": (-117.565, -116.9924),\n",
+    "    #   \"include_range_endpoints\": True,\n",
+    "    #   \"generate_mask\": True\n",
+    "    # },\n",
     "    {\n",
-    "      \"name\": \"tj_plume_1km_2022-09\",\n",
-    "      \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "      \"code\": \"USWC_1KM_HOURLY\",\n",
-    "      \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
-    "      \"lat_range\": (32.11093, 32.73124),\n",
-    "      \"lon_range\": (-117.565, -116.9924),\n",
+    "      \"name\": \"hycom_hurrhenri\",\n",
+    "      \"datasrc\": \"THREDDS_HYCOM\",\n",
+    "      \"code\": \"GLOBAL_HINDCAST\",\n",
+    "      \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
+    "      \"lat_range\": (38.162201, 41.520008),\n",
+    "      \"lon_range\": (284.290368, 290.276249),\n",
     "      \"include_range_endpoints\": True,\n",
-    "      \"generate_mask\": True\n",
-    "    },\n",
+    "      \"generate_mask\": False\n",
+    "    }\n",
     "    # stuff below here hasn't been updated with the new format\n",
     "#     (\"tj_plume\", \"USWC_1KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "#     (\"tj_plume\", \"USWC_2KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
