--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import reduce\n",
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
@@ -34,14 +35,22 @@
     "results = {\n",
     "    \"thredds_smoothn\": \"results/simulation_tijuana_hurrkay_alongshore_2022-10-31T13-18-57-smoothn/particlefile.nc\",\n",
     "    \"thredds_nosmoothn\": \"results/simulation_tijuana_hurrkay_alongshore_2022-11-02T13-36-12-nosmoothn/particlefile.nc\",\n",
-    "    \"oi\": \"results/simulation_tijuana_hurrkay_oi_alongshore_2022-10-31T13-18-58/particlefile.nc\"\n",
+    "    \"oi\": \"results/simulation_tijuana_hurrkay_oi_alongshore_2022-10-31T13-18-58/particlefile.nc\",\n",
+    "    \"henri_hfr\": \"results/simulation_ny_hurrhenri_hfrnet_2022-11-14T14-35-36/particlefile.nc\"\n",
     "}\n",
-    "to_compare = [\"thredds_nosmoothn\", \"oi\"]\n",
-    "coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
+    "to_compare = [\"henri_hfr\"]\n",
+    "# to_compare = [\"thredds_smoothn\", \"thredds_nosmoothn\"]\n",
+    "# coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
     "\n",
     "domain = constants.TIJUANA_RIVER_DOMAIN\n",
+    "domain = {\n",
+    "    \"S\": 38.162201,\n",
+    "    \"N\": 41.520008,\n",
+    "    \"W\": -75.709632,\n",
+    "    \"E\": -69.723751\n",
+    "}\n",
     "\n",
-    "res_path = Path(f\"results/compare_density_{to_compare[0]}_vs_{to_compare[1]}\")\n",
+    "res_path = Path(f\"results/compare_density_{'_'.join(to_compare)}\")\n",
     "res_path.mkdir(exist_ok=True)\n",
     "\n",
     "for key in results:\n",
@@ -54,7 +63,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "common_timestamps = np.intersect1d(results[to_compare[0]].data_vars[\"time\"], results[to_compare[1]].data_vars[\"time\"])"
+    "# common_timestamps = np.intersect1d(results[to_compare[0]].data_vars[\"time\"], results[to_compare[1]].data_vars[\"time\"])\n",
+    "if len(to_compare) <= 1:\n",
+    "    tstamps = results[to_compare[0]].data_vars[\"time\"]\n",
+    "    tstamps = tstamps[~np.isnan(tstamps)]\n",
+    "    common_timestamps = np.sort(np.unique(tstamps))\n",
+    "else:\n",
+    "    common_timestamps = reduce(np.intersect1d, list(map(lambda x: results[key].data_vars[\"time\"], to_compare)))"
    ]
   },
   {
@@ -65,12 +80,12 @@
    "source": [
     "for i, t in enumerate(common_timestamps):\n",
     "    lats1, lons1 = results[to_compare[0]].get_positions_time(t, when=\"before\")\n",
-    "    lats2, lons2 = results[to_compare[1]].get_positions_time(t, when=\"before\")\n",
+    "    # lats2, lons2 = results[to_compare[1]].get_positions_time(t, when=\"before\")\n",
     "    fig, (ax1, ax2) = plotting.carree_subplots((1,2), domain=domain)\n",
     "    plotting.draw_particle_density(lats1, lons1, bins=100, ax=ax1, pmax=0.7, title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
-    "    plotting.draw_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
-    "    plotting.draw_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=0.7, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
-    "    plotting.draw_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
+    "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
+    "    # plotting.draw_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=0.7, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
     "    strnum = str(i).zfill(3)\n",
     "    plotting.draw_plt(savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6))"
    ]
@@ -86,9 +101,9 @@
     "t = common_timestamps[-1]\n",
     "for i, name in enumerate(to_compare):\n",
     "    lats, lons = results[name].get_positions_time(t, when=\"before\")\n",
-    "    fig, ax = plotting.carree_subplots((1,1), domain=domain)\n",
-    "    plotting.draw_particle_density(lats, lons, bins=100, ax=ax, pmax=0.7, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
-    "    plotting.draw_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
+    "    fig, ax = plotting.carree_subplots((1,1), land=True)\n",
+    "    plotting.draw_particle_density(lats, lons, bins=100, ax=ax, pmax=1, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
     "    plotting.draw_plt(savefile=res_path / f\"density_plot_final_{name}.png\", fig=fig, fit=True, figsize=(5, 5))"
    ]
   }
