Generate some better henri density plots

--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,19 +36,26 @@
     "    \"thredds_smoothn\": \"results/simulation_tijuana_hurrkay_alongshore_2022-10-31T13-18-57-smoothn/particlefile.nc\",\n",
     "    \"thredds_nosmoothn\": \"results/simulation_tijuana_hurrkay_alongshore_2022-11-02T13-36-12-nosmoothn/particlefile.nc\",\n",
     "    \"oi\": \"results/simulation_tijuana_hurrkay_oi_alongshore_2022-10-31T13-18-58/particlefile.nc\",\n",
-    "    \"henri_hfr\": \"results/simulation_ny_hurrhenri_hfrnet_2022-11-14T14-35-36/particlefile.nc\"\n",
+    "    \"henri_hfr\": \"results/simulation_ny_hurrhenri_hfrnet_2022-11-14T14-35-36/particlefile.nc\",\n",
+    "    \"henri_hycom\": \"results/simulation_ny_hurrhenri_hycom_2022-11-14T17-46-40/particlefile.nc\",\n",
     "}\n",
-    "to_compare = [\"henri_hfr\"]\n",
+    "to_compare = [\"henri_hfr\", \"henri_hycom\"]\n",
     "# to_compare = [\"thredds_smoothn\", \"thredds_nosmoothn\"]\n",
     "# coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
     "\n",
     "domain = constants.TIJUANA_RIVER_DOMAIN\n",
     "domain = {\n",
-    "    \"S\": 38.162201,\n",
-    "    \"N\": 41.520008,\n",
-    "    \"W\": -75.709632,\n",
-    "    \"E\": -69.723751\n",
+    "    \"S\": 40.05,\n",
+    "    \"N\": 40.8,\n",
+    "    \"W\": -74.1,\n",
+    "    \"E\": -73.2\n",
     "}\n",
+    "# domain = {\n",
+    "#     \"S\": 38.5,\n",
+    "#     \"N\": 39.2,\n",
+    "#     \"W\": -75,\n",
+    "#     \"E\": -74\n",
+    "# }\n",
     "\n",
     "res_path = Path(f\"results/compare_density_{'_'.join(to_compare)}\")\n",
     "res_path.mkdir(exist_ok=True)\n",
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +87,11 @@
    "source": [
     "for i, t in enumerate(common_timestamps):\n",
     "    lats1, lons1 = results[to_compare[0]].get_positions_time(t, when=\"before\")\n",
-    "    # lats2, lons2 = results[to_compare[1]].get_positions_time(t, when=\"before\")\n",
+    "    lats2, lons2 = results[to_compare[1]].get_positions_time(t, when=\"before\")\n",
     "    fig, (ax1, ax2) = plotting.carree_subplots((1,2), domain=domain)\n",
-    "    plotting.draw_particle_density(lats1, lons1, bins=100, ax=ax1, pmax=0.7, title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    plotting.draw_particle_density(lats1, lons1, bins=100, ax=ax1, pmax=1, title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
     "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
-    "    # plotting.draw_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=0.7, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    plotting.draw_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=1, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
     "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
     "    strnum = str(i).zfill(3)\n",
     "    plotting.draw_plt(savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6))"
@@ -92,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,10 +107,14 @@
     "\n",
     "t = common_timestamps[-1]\n",
     "for i, name in enumerate(to_compare):\n",
+    "    starts = np.unique(np.array([results[name].ds[\"lat\"][:, 0], results[name].ds[\"lon\"][:, 0]]).T, axis=0).T\n",
     "    lats, lons = results[name].get_positions_time(t, when=\"before\")\n",
-    "    fig, ax = plotting.carree_subplots((1,1), land=True)\n",
-    "    plotting.draw_particle_density(lats, lons, bins=100, ax=ax, pmax=1, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    fig, ax = plotting.carree_subplots((1,1), domain=domain, land=True)\n",
+    "    # ax.scatter((starts[1] + 180) % 360 - 180, starts[0], marker=\"x\")\n",
+    "    plotting.draw_particle_density(lats, lons, bins=50, ax=ax, pmax=0.8, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
     "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
+    "    # ax.scatter((starts[1] + 180) % 360 - 180, starts[0], marker=\"x\")\n",
+    "    ax.scatter(starts[1], starts[0], marker=\"x\", c=\"k\")\n",
     "    plotting.draw_plt(savefile=res_path / f\"density_plot_final_{name}.png\", fig=fig, fit=True, figsize=(5, 5))"
    ]
   }
