--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -52,7 +52,7 @@
     "    # \"tijuana_2020-03_alongshore.json\",\n",
     "    # \"tijuana_hurrkay_alongshore.yaml\",\n",
     "    # \"tijuana_hurrkay_oi_alongshore.yaml\"\n",
-    "    # \"ny_hurrhenri_hfrnet.yaml\",\n",
+    "    \"ny_hurrhenri_hfrnet.yaml\",\n",
     "    \"ny_hurrhenri_hycom.yaml\"\n",
     "]"
    ]
