Refactor configs and some method signatures

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# access thredds\n",
+    "# Download data\n",
     "\n",
-    "Download sliced netcdf data from Thredds"
+    "Download sliced data from an online source."
    ]
   },
   {
