--- a/generate_alongshore_currents.ipynb
+++ b/generate_alongshore_currents.ipynb
@@ -51,9 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "velocity_field_nc = FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209.nc\"\n",
+    "# velocity_field_nc = FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209.nc\"\n",
+    "velocity_field_nc = FIELD_NETCDF_DIR / \"tj_plume_1km_2022-09.nc\"\n",
     "coastline_mat = DATA_DIR / \"socal_boundary.mat\"\n",
-    "output_file = FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209_alongshore.nc\"\n",
+    "# output_file = FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209_alongshore.nc\"\n",
+    "output_file = FIELD_NETCDF_DIR / \"tj_plume_1km_2022-09_alongshore.nc\"\n",
     "# 1 km resolution values\n",
     "lat_diff = 0.00898933\n",
     "lon_diff = 0.01042175"
@@ -283,6 +285,14 @@
     "fig = plt.figure(figsize=(10, 10))\n",
     "ax = fig.add_subplot(111, projection=ccrs.PlateCarree())\n",
     "ax.add_feature(cartopy.feature.COASTLINE)\n",
+    "domain = {\n",
+    "    \"W\": -117.3,\n",
+    "    \"E\": -116.95,\n",
+    "    \"S\": 32.2,\n",
+    "    \"N\":32.79\n",
+    "}\n",
+    "ext = [domain[\"W\"], domain[\"E\"], domain[\"S\"], domain[\"N\"]]\n",
+    "ax.set_extent(ext, crs=ccrs.PlateCarree())\n",
     "quiv = ax.quiver(\n",
     "    othermgrid[1].flatten(),\n",
     "    othermgrid[0].flatten(),\n",
@@ -296,6 +306,7 @@
     "cbar.ax.get_yaxis().labelpad = 15\n",
     "cbar.ax.set_ylabel(\"Alongshore current velocity (m/s)\", rotation=270)\n",
     "ax.set_title(f\"Alongshore velocities on {tstamp}\")\n",
+    "fig.patch.set_facecolor(\"w\")\n",
     "fig.show()"
    ]
   },
