--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# simulation_runner\n",
+    "# Simulation runner\n",
     "\n",
-    "runs parcels on existing netcdf files"
+    "Run a simulation using a config file."
    ]
   },
   {
@@ -72,13 +72,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Animated gif stuff and particle simulation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -87,6 +80,13 @@
    "outputs": [],
    "source": [
     "[sim.pset.show(field=\"vector\") for sim in sims]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Particle simulation and visualization"
    ]
   },
   {
