Fix some longitude range conversions, add to vector timeseries notebook

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -148,28 +148,46 @@
     "    #   \"include_range_endpoints\": True,\n",
     "    #   \"generate_mask\": True\n",
     "    # },\n",
+    "    # {\n",
+    "    #   \"name\": \"tj_plume_2km_2022-09\",\n",
+    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #   \"code\": \"USWC_2KM_HOURLY\",\n",
+    "    #   \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
+    "    #   \"lat_range\": (32.11093, 32.73124),\n",
+    "    #   \"lon_range\": (-117.565, -116.9924),\n",
+    "    #   \"include_range_endpoints\": True,\n",
+    "    #   \"generate_mask\": False\n",
+    "    # },\n",
+    "    # {\n",
+    "    #   \"name\": \"tj_plume_6km_2022-09\",\n",
+    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #   \"code\": \"USWC_6KM_HOURLY\",\n",
+    "    #   \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
+    "    #   \"lat_range\": (32.11093, 32.73124),\n",
+    "    #   \"lon_range\": (-117.565, -116.9924),\n",
+    "    #   \"include_range_endpoints\": True,\n",
+    "    #   \"generate_mask\": False\n",
+    "    # },\n",
     "    {\n",
-    "      \"name\": \"hycom_hurrhenri\",\n",
-    "      \"datasrc\": \"THREDDS_HYCOM\",\n",
-    "      \"code\": \"GLOBAL_HINDCAST\",\n",
+    "      \"name\": \"hurrhenri_hfrnet\",\n",
+    "      \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "      \"code\": \"USEC_6KM_HOURLY\",\n",
     "      \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
     "      \"lat_range\": (38.162201, 41.520008),\n",
     "      \"lon_range\": (284.290368, 290.276249),\n",
     "      \"include_range_endpoints\": True,\n",
     "      \"generate_mask\": False\n",
-    "    }\n",
-    "    # stuff below here hasn't been updated with the new format\n",
-    "#     (\"tj_plume\", \"USWC_1KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "#     (\"tj_plume\", \"USWC_2KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tj_plume\", \"USWC_6KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tijuana_river\", \"USWC_1KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river\", \"USWC_2KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river\", \"USWC_6KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "#     (\"tijuana_river_small\", \"USWC_1KM_HOURLY\", (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
-    "#     (\"tijuana_river_now\", \"USWC_1KM_HOURLY\", get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river_now\", \"USWC_2KM_HOURLY\", get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river_now\", \"USWC_6KM_HOURLY\", (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "#     (\"missing_buoy\", \"USWC_6KM_HOURLY\", (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
+    "    },\n",
+    "    # {\n",
+    "    #   \"name\": \"hurrhenri_hycom\",\n",
+    "    #   \"datasrc\": \"THREDDS_HYCOM\",\n",
+    "    #   \"code\": \"GLOBAL_HINDCAST\",\n",
+    "    #   \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
+    "    #   \"lat_range\": (38.162201, 41.520008),\n",
+    "    #   \"lon_range\": (284.290368, 290.276249),\n",
+    "    #   \"include_range_endpoints\": True,\n",
+    "    #   \"generate_mask\": False\n",
+    "    # },\n",
     "]\n",
     "\n",
     "\n",
