--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -30,18 +30,7 @@
     "\n",
     "### other ideas\n",
     "\n",
-    "DINEOF (could only find an implementation in R)\n",
-    "\n",
-    "to be honest I don't understand any of these methods but they look cool"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### currently implemented:\n",
-    "\n",
-    "rip data straight from the lower resolution data for areas where data is considered missing in the high resolution data"
+    "DINEOF (could only find an implementation in R)"
    ]
   },
   {
@@ -65,7 +54,7 @@
     "import numpy as np\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, DataLoader\n",
     "from pyplume.constants import *\n",
     "from pyplume.gapfilling import InterpolationStep, SmoothnStep, Gapfiller"
    ]
@@ -94,18 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_root = Path(\"current_netcdfs\")\n",
-    "\n",
-    "target = SurfaceGrid(files_root / \"tj_plume_2020-02_ThreddsCode.USWC_1KM_HOURLY.nc\")\n",
-    "\n",
-    "interp_references = [\n",
-    "    SurfaceGrid(files_root / \"tj_plume_2020-02_ThreddsCode.USWC_2KM_HOURLY.nc\"),\n",
-    "    SurfaceGrid(files_root / \"tj_plume_2020-02_ThreddsCode.USWC_6KM_HOURLY.nc\"),\n",
-    "]\n",
-    "\n",
-    "# mask_nc can be none if you do not need to filter out land currents\n",
-    "mask_nc = None\n",
-    "mask_nc = SurfaceGrid(files_root / \"tj_sample_ThreddsCode.USWC_1KM_HOURLY.nc\", init_fs=False)"
+    "target_path = \"data/field_netcdfs/tj_plume_1km_2022-09.nc\"\n",
+    "target = DataLoader(target_path).dataset"
    ]
   },
   {
@@ -117,8 +96,11 @@
     "gapfiller = Gapfiller()\n",
     "# ADD GAPFILLING STEPS HERE\n",
     "gapfiller.add_steps(\n",
-    "    InterpolationStep(interp_references),\n",
-    "    SmoothnStep(mask=mask_nc)\n",
+    "    InterpolationStep([\n",
+    "        \"data/field_netcdfs/tj_plume_2km_2022-09.nc\",\n",
+    "        \"data/field_netcdfs/tj_plume_6km_2022-09.nc\",\n",
+    "    ]),\n",
+    "    # SmoothnStep(mask=\"data/field_netcdfs/tj_plume_1km_2022-09_mask.npy\")\n",
     ")"
    ]
   },
@@ -146,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = str(target.path).split(\".nc\")[0] + \"_interped.nc\"\n",
+    "save_path = str(target_path).split(\".nc\")[0] + \"_interped.nc\"\n",
     "target_interped_ds.to_netcdf(save_path)\n",
     "print(f\"saved to {save_path}\")"
    ]
@@ -164,21 +146,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fs = dataset_to_fieldset(target)\n",
     "fs_interp = dataset_to_fieldset(target_interped_ds)\n",
-    "target.fieldset.U.show()  # uninterpolated\n",
-    "fs_interp.U.show()  # interpolated, gapfilled, smoothed\n",
-    "fs_interp.V.show()  # interpolated, gapfilled, smoothed"
+    "fs.U.show()  # uninterpolated\n",
+    "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
-  },
   "kernelspec": {
-   "display_name": "py3-parcels",
+   "display_name": "Python 3.7.10 ('py3-parcels')",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -191,6 +170,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+   }
   }
  },
  "nbformat": 4,
