--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -89,10 +89,10 @@
     "    lats1, lons1 = results[to_compare[0]].get_positions_time(t, query=\"before\")\n",
     "    lats2, lons2 = results[to_compare[1]].get_positions_time(t, query=\"before\")\n",
     "    fig, (ax1, ax2) = plotting.carree_subplots((1,2), domain=domain)\n",
-    "    plotting.draw_particle_density(lats1, lons1, bins=100, ax=ax1, pmax=1, title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
-    "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
-    "    plotting.draw_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=1, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
-    "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
+    "    plotting.plot_particle_density(lats1, lons1, bins=100, ax=ax1, pmax=1, title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
+    "    plotting.plot_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=1, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
     "    strnum = str(i).zfill(3)\n",
     "    plotting.draw_plt(savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6))"
    ]
@@ -110,8 +110,8 @@
     "    starts = np.unique(np.array([results[name].ds[\"lat\"][:, 0], results[name].ds[\"lon\"][:, 0]]).T, axis=0).T\n",
     "    lats, lons = results[name].get_positions_time(t, query=\"before\")\n",
     "    fig, ax = plotting.carree_subplots((1,1), domain=domain, land=True)\n",
-    "    plotting.draw_particle_density(lats, lons, bins=50, ax=ax, pmax=0.76, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
-    "    # plotting.draw_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
+    "    plotting.plot_particle_density(lats, lons, bins=50, ax=ax, pmax=0.76, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
     "    ax.scatter(starts[1], starts[0], marker=\"x\", c=\"r\")\n",
     "    plotting.draw_plt(savefile=res_path / f\"density_plot_final_{name}.png\", fig=fig, fit=True, figsize=(7, 4.5))"
    ]
