Add DCTPLS gapfilling port to python

--- a/plot_current_timeseries.ipynb
+++ b/plot_current_timeseries.ipynb
@@ -31,10 +31,10 @@
    "outputs": [],
    "source": [
     "targets = {\n",
-    "    \"Tijuana OI\": \"data/field_netcdfs/oi_fields/Tot_SDLJ_202209.nc\",\n",
-    "    \"Tijuana UWLS\": \"data/field_netcdfs/tj_plume_1km_2022-09_interped.nc\",\n",
-    "    # \"New York/Jersey HFRNet\": \"data/field_netcdfs/hurrhenri_hfrnet.nc\",\n",
-    "    # \"New York/Jersey HYCOM\": \"data/field_netcdfs/hurrhenri_hycom.nc\",\n",
+    "    # \"Tijuana OI\": \"data/field_netcdfs/oi_fields/Tot_SDLJ_202209.nc\",\n",
+    "    # \"Tijuana UWLS\": \"data/field_netcdfs/tj_plume_1km_2022-09_interped.nc\",\n",
+    "    \"New York/Jersey HFRNet\": \"data/field_netcdfs/hurrhenri_hfrnet.nc\",\n",
+    "    \"New York/Jersey HYCOM\": \"data/field_netcdfs/hurrhenri_hycom.nc\",\n",
     "}"
    ]
   },
@@ -72,10 +72,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos = [32.6, -117.17]\n",
-    "# pos = [40.5, -73.85]\n",
-    "timerng = [\"2022-09-08T06:00\", \"2022-09-12T00:00\"]\n",
-    "# timerng = [\"2021-08-21T12:00\", \"2021-08-23T18:00\"]\n",
+    "# pos = [32.6, -117.17]\n",
+    "pos = [40.5, -73.85]\n",
+    "# timerng = [\"2022-09-08T06:00\", \"2022-09-12T00:00\"]\n",
+    "timerng = [\"2021-08-21T12:00\", \"2021-08-23T18:00\"]\n",
     "\n",
     "timerng = [np.datetime64(t) for t in timerng]"
    ]
@@ -120,9 +120,11 @@
     "    for tick in ax.get_xticklabels():\n",
     "        tick.set_rotation(20)\n",
     "axs[0].set_title(\"Vector zonal component\")\n",
+    "axs[0].set_ylabel(\"m/s\")\n",
     "axs[1].set_title(\"Vector meridional component\")\n",
-    "fig.suptitle(\"Tijuana vector timeseries\", fontsize=16)\n",
-    "# fig.suptitle(\"New York Bay vector timeseries\", fontsize=16)\n",
+    "axs[1].set_ylabel(\"m/s\")\n",
+    "# fig.suptitle(\"Tijuana vector timeseries\", fontsize=16)\n",
+    "fig.suptitle(\"New York Bay vector timeseries\", fontsize=16)\n",
     "fig.tight_layout()\n",
     "fig.patch.set_facecolor(\"w\")"
    ]
