--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -49,11 +49,11 @@
     "configs = [\n",
     "    # \"tijuana_2020-03_overland.json\",\n",
     "    # \"tijuana_2020-03_slipmask.json\",\n",
-    "    # \"tijuana_2020-03_alongshore.json\",\n",
+    "    \"tijuana_2020-03_alongshore.yaml\",\n",
     "    # \"tijuana_hurrkay_alongshore.yaml\",\n",
     "    # \"tijuana_hurrkay_oi_alongshore.yaml\"\n",
-    "    \"ny_hurrhenri_hfrnet.yaml\",\n",
-    "    \"ny_hurrhenri_hycom.yaml\"\n",
+    "    # \"ny_hurrhenri_hfrnet.yaml\",\n",
+    "    # \"ny_hurrhenri_hycom.yaml\"\n",
     "]"
    ]
   },
