Add DINEOF and some fixes to the gapfiller

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -12,10 +12,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### potential shenanigans\n",
+    "## potential shenanigans\n",
     "\n",
     "\"Several techniques have been used to fill the gaps in either the UWLS or OI derived total vector maps.\n",
     "\n",
@@ -28,7 +29,7 @@
     "\n",
     "---\n",
     "\n",
-    "### other ideas\n",
+    "## other ideas\n",
     "\n",
     "DINEOF (could only find an implementation in R)"
    ]
@@ -56,16 +57,17 @@
     "import pyplume.utils as utils\n",
     "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, DataLoader\n",
     "from pyplume.constants import *\n",
-    "from pyplume.gapfilling import InterpolationStep, SmoothnStep, Gapfiller"
+    "from pyplume.gapfilling import *"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### target and interp_references\n",
+    "## target and interp_references\n",
     "\n",
-    "#### Change these variables\n",
+    "### Change these variables\n",
     "\n",
     "`target` is the data you are interpolating.\n",
     "\n",
@@ -96,19 +98,21 @@
     "gapfiller = Gapfiller()\n",
     "# ADD GAPFILLING STEPS HERE\n",
     "gapfiller.add_steps(\n",
-    "    InterpolationStep([\n",
-    "        \"data/field_netcdfs/tj_plume_2km_2022-09.nc\",\n",
-    "        \"data/field_netcdfs/tj_plume_6km_2022-09.nc\",\n",
-    "    ]),\n",
-    "    # SmoothnStep(mask=\"data/field_netcdfs/tj_plume_1km_2022-09_mask.npy\")\n",
+    "    # LowResOversample([\n",
+    "    #     \"data/field_netcdfs/tj_plume_2km_2022-09.nc\",\n",
+    "    #     \"data/field_netcdfs/tj_plume_6km_2022-09.nc\",\n",
+    "    # ]),\n",
+    "    # DCTPLS(exclude_oob=False),\n",
+    "    DINEOF(exclude_oob=False)\n",
     ")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### formatting and saving"
+    "## formatting and saving"
    ]
   },
   {
@@ -123,21 +127,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_path = str(target_path).split(\".nc\")[0] + \"_interped.nc\"\n",
-    "target_interped_ds.to_netcdf(save_path)\n",
-    "print(f\"saved to {save_path}\")"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### display field to see if interpolation worked"
+    "## display field to see if interpolation worked"
    ]
   },
   {
@@ -148,8 +142,27 @@
    "source": [
     "fs = dataset_to_fieldset(target)\n",
     "fs_interp = dataset_to_fieldset(target_interped_ds)\n",
-    "fs.U.show()  # uninterpolated\n",
-    "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
+    "fs.U.show()  # original\n",
+    "fs_interp.U.show()  # gapfilled"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save gapfilled field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_path = str(target_path).split(\".nc\")[0] + \"_interped.nc\"\n",
+    "target_interped_ds.to_netcdf(save_path)\n",
+    "print(f\"saved to {save_path}\")"
    ]
   }
  ],
