--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# missing data interpolation\n",
+    "# Spatial gapfilling\n",
     "\n",
-    "statistics is the answer to everything\n",
+    "Statistics is the answer to everything\n",
     "\n",
     "Use this notebook to gapfill a saved netcdf file."
    ]
@@ -16,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## potential shenanigans\n",
+    "## Potential techniques\n",
     "\n",
     "\"Several techniques have been used to fill the gaps in either the UWLS or OI derived total vector maps.\n",
     "\n",
@@ -24,14 +25,16 @@
     "\n",
     "- normal mode analysis\n",
     "- open-boundary modal analysis (OMA)\n",
-    "- empirical orthogonal function analysis (EOF)\n",
+    "- empirical orthogonal function analysis (DINEEOF)\n",
     "- use idealized/smoothed observed covariance\n",
+    "- self-organizing maps (SOM)\n",
+    "- penalized least squares (DCT-PLS)\n",
     "\n",
-    "---\n",
+    "## What's implemented right now?\n",
     "\n",
-    "## other ideas\n",
-    "\n",
-    "DINEOF (could only find an implementation in R)"
+    "- low resolution oversampling\n",
+    "- DINEOF\n",
+    "- DCT-PLS"
    ]
   },
   {
@@ -55,9 +58,8 @@
     "import numpy as np\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, DataLoader\n",
-    "from pyplume.constants import *\n",
-    "from pyplume.gapfilling import *"
+    "from pyplume.dataloaders import dataset_to_fieldset, DataLoader\n",
+    "from pyplume import plotting, gapfilling"
    ]
   },
   {
@@ -65,18 +67,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## target and interp_references\n",
+    "## Change these variables\n",
     "\n",
-    "### Change these variables\n",
-    "\n",
-    "`target` is the data you are interpolating.\n",
-    "\n",
-    "`interp_references` is a list of reference data to interpolate from. A few specifications:\n",
-    "- should be ordered from most accurate data to least accurate (highest to lowest resolution)\n",
-    "- time domain should be identical or bigger than the one of the target\n",
-    "- lat and lon domain should be bigger than the target's to prevent any out-of-bounds complications\n",
-    "\n",
-    "`mask_nc` must have the exact same lat and lon dimensions of the target"
+    "`target_path` is the path to the data you want to gapfill."
    ]
   },
   {
@@ -90,20 +83,30 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Choose gapfilling methods to execute\n",
+    "\n",
+    "They will process on the target sequentially in the order defined."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapfiller = Gapfiller()\n",
+    "gapfiller = gapfilling.Gapfiller()\n",
     "# ADD GAPFILLING STEPS HERE\n",
     "gapfiller.add_steps(\n",
-    "    # LowResOversample([\n",
+    "    # gapfilling.LowResOversample([\n",
     "    #     \"data/field_netcdfs/tj_plume_2km_2022-09.nc\",\n",
     "    #     \"data/field_netcdfs/tj_plume_6km_2022-09.nc\",\n",
     "    # ]),\n",
-    "    # DCTPLS(exclude_oob=False),\n",
-    "    DINEOF(exclude_oob=False)\n",
+    "    gapfilling.DCTPLS(exclude_oob=False),\n",
+    "    # gapfilling.DINEOF(exclude_oob=False)\n",
     ")"
    ]
   },
@@ -131,7 +134,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## display field to see if interpolation worked"
+    "## Display interpolated field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestep = 10\n",
+    "plotting.plot_vectorfield(target, show_time=timestep)\n",
+    "plotting.plot_vectorfield(target_interped_ds, show_time=timestep)"
    ]
   },
   {
@@ -151,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save gapfilled field"
+    "## Save gapfilled data to file"
    ]
   },
   {
