Simplify gapfilling notebook a bit

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -98,9 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gapfiller = gapfilling.Gapfiller()\n",
     "# ADD GAPFILLING STEPS HERE\n",
-    "gapfiller.add_steps(\n",
+    "gapfiller = gapfilling.Gapfiller(\n",
     "    # gapfilling.LowResOversample([\n",
     "    #     \"data/field_netcdfs/tj_plume_2km_2022-09.nc\",\n",
     "    #     \"data/field_netcdfs/tj_plume_6km_2022-09.nc\",\n",
