Fix plotting bugs with vector fields

--- a/generate_alongshore_currents.ipynb
+++ b/generate_alongshore_currents.ipynb
@@ -272,7 +272,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyplume.plotting import get_carree_axis, get_carree_gl\n",
+    "from pyplume import plotting\n",
     "import cartopy\n",
     "import cartopy.crs as ccrs\n",
     "\n",
@@ -281,15 +281,22 @@
     "othermgrid = np.meshgrid(lats_grid, lons_grid, indexing=\"ij\")\n",
     "us = coast_u[idx].flatten()\n",
     "vs = coast_v[idx].flatten()\n",
+    "where_quiver = ~np.isnan(us)\n",
     "mags = np.sqrt(us ** 2 + vs ** 2)\n",
     "fig = plt.figure(figsize=(10, 10))\n",
     "ax = fig.add_subplot(111, projection=ccrs.PlateCarree())\n",
-    "ax.add_feature(cartopy.feature.COASTLINE)\n",
+    "ax.scatter(othermgrid[1].flatten()[where_quiver], othermgrid[0].flatten()[where_quiver], s=10, edgecolor=\"k\")\n",
+    "# coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
+    "coast_lats, coast_lons = utils.load_geo_points(\"data/socal_boundary.mat\")\n",
+    "plotting.plot_coastline(coast_lats, coast_lons, ax=ax, linewidth=0.7)\n",
+    "# ax.add_feature(cartopy.feature.COASTLINE)\n",
+    "ax.add_feature(cartopy.feature.LAND, facecolor=\"#fffef7\")\n",
+    "ax.add_feature(cartopy.feature.OCEAN, facecolor=\"#dbf7ff\")\n",
     "domain = {\n",
-    "    \"W\": -117.3,\n",
-    "    \"E\": -116.95,\n",
-    "    \"S\": 32.2,\n",
-    "    \"N\":32.79\n",
+    "    \"W\": -117.27,\n",
+    "    \"E\": -117.05,\n",
+    "    \"S\": 32.4,\n",
+    "    \"N\": 32.7\n",
     "}\n",
     "ext = [domain[\"W\"], domain[\"E\"], domain[\"S\"], domain[\"N\"]]\n",
     "ax.set_extent(ext, crs=ccrs.PlateCarree())\n",
@@ -299,9 +306,10 @@
     "    us,\n",
     "    vs,\n",
     "    mags,\n",
-    "    scale=6\n",
+    "    scale=4,\n",
+    "    width=0.004\n",
     ")\n",
-    "get_carree_gl(ax)\n",
+    "plotting.get_carree_gl(ax)\n",
     "cbar = fig.colorbar(quiv, shrink=0.6)\n",
     "cbar.ax.get_yaxis().labelpad = 15\n",
     "cbar.ax.set_ylabel(\"Alongshore current velocity (m/s)\", rotation=270)\n",
