--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -49,8 +49,8 @@
     "configs = [\n",
     "    # \"tijuana_2020-03_overland.json\",\n",
     "    # \"tijuana_2020-03_slipmask.json\",\n",
-    "    \"tijuana_2020-03_alongshore.yaml\",\n",
-    "    # \"tijuana_hurrkay_alongshore.yaml\",\n",
+    "    # \"tijuana_2020-03_alongshore.yaml\",\n",
+    "    \"tijuana_hurrkay_alongshore.yaml\",\n",
     "    # \"tijuana_hurrkay_oi_alongshore.yaml\"\n",
     "    # \"ny_hurrhenri_hfrnet.yaml\",\n",
     "    # \"ny_hurrhenri_hycom.yaml\"\n",
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10 (default, Feb 26 2021, 10:16:00) \n[Clang 10.0.0 ]"
+   "version": "3.7.10"
   },
   "vscode": {
    "interpreter": {
